Fixed Logo Spacing
For Google Chrome (17.3in)

--- a/Webpage Version/project-gg/src/styles/index.css
+++ b/Webpage Version/project-gg/src/styles/index.css
@@ -1,14 +1,11 @@
+@import url('https://fonts.googleapis.com/css?family=Bungee&display=swap');
 body {
   margin: 0;
-  padding: 0;
-
-  border-style: solid;
-  border-width: 2px;
 }
 html {
   background: red; /* fallback color */
   background: linear-gradient(to right, #ea6341, #2c265a);
-  background-repeat: no-repeat;
+  background-repeat: repeat-y;
   background-size: cover;
   width: 100%;
   height: 100%;
@@ -43,12 +40,10 @@ html {
   text-align: center;
 }
 .logoText {
-  font-family: bungee, sans-serif;
+  font-family: 'Bungee', cursive;
   font-size: 60px;
-  margin-left: 2%;
-  margin-top: 0%;
-  margin-bottom: 4%;
-  padding: 0%;
+  margin-top: -2rem;
+  margin-left: 2rem;
 }
 .LoginScreen {
   margin: 0;
